* Thu Nov 15 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.7.0-0
- Fix warning about automatic data type munging in the puppet server sysconfig
  template
- Add workaround for Puppet 5 background exec issue to the generate_types exec

* Mon Oct 29 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.7.0-0
- Remove deprecated `[master] ca` setting when `ca = true` in Puppet 5.5.6+
- Remove `[master] ca` setting in Puppet 6+
- Update badges and contribution guide URL in README.md

* Mon Oct 15 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.7.0-0
- Add `ensure` parameter to `pupmod::conf``
- Ensure that `trusted_server_facts` is removed for Puppet 5.+ (PUP-6112)

* Tue Sep 11 2018 Steven Pritchard <steven.pritchard@onyxpoint.com> - 7.7.0-0
- Unconditionally manages the puppet service
- Remove the (apparently) broken status logic on the puppet service

* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.7.0-0
- Update Hiera 4 to Hiera 5

* Thu Jul 19 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.6.1-0
- Fixed bug in which the JAVA tmpdir path for the puppetserver was
  incorrectly set.  This could cause puppetserver RPM upgrades to fail.

* Thu Jul 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.6.1-0
- Fixed the new `simp_generate_types` script to ensure that the permissions on
  the created directory are correctly set.

* Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.6.1-0
- Cleanup unneeded fixtures and update CI assets
- Remove unused simp/tcpwrappers and simp/logrotate dependencies

* Fri May 04 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.6.0-0
- Changed some 'validate_re' statements to 'assert_type' to remove deprecation
  warnings
- Added 'pupmod::master::generate_types' (enabled by default) which:
  - Adds a script, /usr/local/sbin/simp_generate_types that will run 'puppet
    generate types' either on all environments (when first distributed by
    Puppet) or per environment