@@ -1,3 +1,7 @@
+* Tue Jan 22 2019 Brandon Riden <brandon.riden@onyxpoint.com> - 7.7.1-0
+- Set pupmod::master::generate_types: enable => false by default to fix
+  bug causing puppet servers to crash.
+
 * Thu Nov 15 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.7.0-0
 - Fix warning about automatic data type munging in the puppet server sysconfig
   template
